(homepage) Fix overflow issue for thumbnail overlays

--- a/astrobin/static/astrobin/scss/main.scss
+++ b/astrobin/static/astrobin/scss/main.scss
@@ -63,6 +63,10 @@ a:focus {
   display: none;
 }
 
+.overflow-visible {
+  overflow: visible !important;
+}
+
 /* ----------------------------------------------
      HTML ELEMENTS
   ------------------------------------------------- */
